--- a/css/cayman.css
+++ b/css/cayman.css
@@ -353,6 +353,9 @@ a:hover {
 .page-header {
   text-align: center;
   background-image: url('assets/mount_image.jpg');
+  background-size: cover;
+  background-position: center;
+  color: #5fcf80;
 }
 
 @media screen and (min-width: 64em) {
